@@ -1,3 +1,8 @@
+2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/relocate.cc [HAVE_GETTEXT]: Include libintl.h.  Fixes mingw
+	compile.
+
 2005-12-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* .cvsignore: Add install-sh.
